# 3d_lunge_iq

./: 1PreProcess.py  2TrainMain.py  README.md  input.txt  lstm_model.pth  output.csv  pyproject.toml
bvh/: test1.bvh  test2.bvh
