[tool.poetry]
name = "3dlungeiq"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
